Fix command line invocation example.